--- a/src/main/resources/chooseCharacter.fxml
+++ b/src/main/resources/chooseCharacter.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -15,14 +16,34 @@
             <ToggleGroup fx:id="rbChooseCharacter" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rbViolet" layoutX="85.0" layoutY="329.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" toggleGroup="$rbChooseCharacter" />
+      <RadioButton fx:id="rbViolet" layoutX="85.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" toggleGroup="$rbChooseCharacter" />
       <RadioButton fx:id="rbStruct" layoutX="250.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseCharacter" text=":D-STRUCT-OR" toggleGroup="$rbChooseCharacter" />
       <RadioButton fx:id="rbDozer" layoutX="455.0" layoutY="163.0" mnemonicParsing="false" onAction="#chooseCharacter" text="DOZER" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbBanshee" layoutX="455.0" layoutY="338.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" toggleGroup="$rbChooseCharacter" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="25.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="25.0" layoutY="179.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="202.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="396.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="403.0" layoutY="187.0" pickOnBounds="true" preserveRatio="true" />
+      <RadioButton fx:id="rbBanshee" layoutX="455.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" toggleGroup="$rbChooseCharacter" />
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="49.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@characters/sprogGreen.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="50.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@characters/violetViolet.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="237.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@characters/structYellow.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="427.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@characters/dozerGrey.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="426.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@characters/banshBlue.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
